# nix-maintenance-status

./: AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  flake.nix
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/adr/: 0001-provenance-claims.md  0002-cross-platform-gc-inventory.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/research/: cron-family-read-only-seams.md  exact-scheduler-contract-pins.md  official-nix-cron-family-mapping-boundaries.md  official-scheduler-authority-seams.md  reproducible-linux-integration-coverage-tests.md
src/: anacron_adapter.rs  catalog.rs  cronie_adapter.rs  diagnostic.rs  evidence.rs  fcron_adapter.rs  lib.rs  macos_adapter.rs  main.rs  report.rs  systemd_adapter.rs  systemd_transport.rs
tests/: cli.rs  diagnostic_input.rs  evidence_boundary.rs  human_output.rs  launchd_schedule.rs  launchd_status.rs  provenance.rs  report_core.rs  report_inventory.rs  report_ledger.rs  systemd_dbus.rs  systemd_schedule.rs
tests/fixtures/fcron/3.4.1/: quoted-command.orig
tests/nixos/: systemd-gc.nix
