[package]
name = "nix-maintenance-status"
version = "0.1.0"
edition = "2024"
authors = ["Anionix"]
description = "Explain the effective status of automated Nix maintenance"
license = "MIT"
repository = "https://github.com/Anionix/nix-maintenance-status"
homepage = "https://github.com/Anionix/nix-maintenance-status"
readme = "README.md"
keywords = ["nix", "nix-darwin", "macos", "observability", "cli"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[features]
systemd-vm-probe = []

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
zbus = { version = "=4.4.0", default-features = false, features = ["async-io"] }

[lib]
name = "nix_maintenance_status"
path = "src/lib.rs"

[[bin]]
name = "nix-maintenance-status"
path = "src/main.rs"

[[bin]]
name = "nix-maintenance-status-systemd-vm-probe"
path = "src/bin/nix-maintenance-status-systemd-vm-probe.rs"
required-features = ["systemd-vm-probe"]
